--- a/agent-gateway/package.json
+++ b/agent-gateway/package.json
@@ -13,6 +13,7 @@
   "type": "commonjs",
   "dependencies": {
     "@erc7824/nitrolite": "^0.5.3",
+    "axios": "^1.13.4",
     "dotenv": "^17.2.3",
     "fastify": "^5.7.4",
     "fastify-plugin": "^5.1.0",
