--- a/orchestrator/package.json
+++ b/orchestrator/package.json
@@ -15,9 +15,10 @@
         "@erc7824/nitrolite": "^0.1.0",
         "dotenv": "^16.3.0",
         "ethers": "^6.9.0",
+        "fastify": "^5.7.4",
+        "uuid": "^9.0.0",
         "viem": "^2.0.0",
-        "ws": "^8.16.0",
-        "uuid": "^9.0.0"
+        "ws": "^8.16.0"
     },
     "devDependencies": {
         "@types/node": "^20.0.0",
