--- a/lifecycle-manager/package.json
+++ b/lifecycle-manager/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "agent-gateway",
+  "name": "lifecycle-manager",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
-    "@erc7824/nitrolite": "^0.5.3",
+    "@types/node": "^25.2.1",
     "axios": "^1.13.4",
-    "dotenv": "^17.2.3",
-    "fastify": "^5.7.4",
-    "fastify-plugin": "^5.1.0",
+    "dotenv": "^17.2.4",
+    "ethers": "^6.16.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3",
     "viem": "^2.45.1"
   },
   "devDependencies": {
-    "@types/node": "^25.2.0",
-    "tsx": "^4.21.0",
-    "typescript": "^5.9.3"
+    "tsx": "^4.21.0"
   }
 }
