--- a/clob/Cargo.toml
+++ b/clob/Cargo.toml
@@ -15,6 +15,8 @@ serde_json = "1.0.114"
 # HTTP server for API
 actix-web = "4"
 actix-rt = "2"
+actix = "0.13"
+actix-web-actors = "4"
 
 # Async runtime
 tokio = { version = "1", features = ["full"] }
