feat(mm-gateway): implement Yellow Network market maker integration
- Add Yellow client, service, and signer modules
- Implement inventory management for Yellow-wrapped CTF tokens
- Add orderbook adapter for Yellow Network compatibility
- Update quote engine for Yellow session-based trading
- Add configuration support for maker/taker roles

--- a/mm-gateway/Cargo.toml
+++ b/mm-gateway/Cargo.toml
@@ -32,6 +32,9 @@ dotenv = "0.15"
 # Utilities
 hex = "0.4"
 rand = "0.8"
+tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
+futures = "0.3.31"
+url = "2.5.8"
 
 [dev-dependencies]
 tokio-test = "0.4"
