chore(env): update market maker environment configurations

--- a/mm-gateway/.env.maker
+++ b/mm-gateway/.env.maker
@@ -11,7 +11,7 @@ MM_ADDRESS=0xf87faCA915DE5A59379c65Bf2f5cc1727E7D54fC
 
 CLOB_API_URL=http://127.0.0.1:3030
 USE_YELLOW=true
-YELLOW_WS_URL=ws://localhost:8000/ws
+YELLOW_WS_URL=wss://clearnet-sandbox.yellow.com/ws
 YELLOW_APP_NAME="Polybook CLOB"
 YELLOW_SCOPE="polybook.clob"
 CTF_YELLOW_VALVE_ADDRESS=0xc90715e8c7e14bb6388594ca690632c183efab9a
