--- a/mm-gateway/.env.taker
+++ b/mm-gateway/.env.taker
@@ -11,7 +11,7 @@ MM_ADDRESS=0x7Dd5b83B26C05A29f7E10fc679564EEB3b844BD8
 
 CLOB_API_URL=http://127.0.0.1:3030
 USE_YELLOW=true
-YELLOW_WS_URL=ws://localhost:8000/ws
+YELLOW_WS_URL=wss://clearnet-sandbox.yellow.com/ws
 YELLOW_APP_NAME="Test app"
 YELLOW_SCOPE="test.app"
 CTF_YELLOW_VALVE_ADDRESS=0xc90715e8c7e14bb6388594ca690632c183efab9a
