--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
       - EXCHANGE_ADDRESS=${EXCHANGE_ADDRESS:-0xde94c82340142d919089978286a86c61d934ba31}
       - STORK_API_KEY=${STORK_API_KEY}
       - DEPLOYER_PRIVATE_KEY=${DEPLOYER_PRIVATE_KEY}
+      - MARKET_DURATION_SECONDS=900 # 15 minutes
     extra_hosts:
       - "host.docker.internal:host-gateway"
 
